// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with groupId 1`] = `
{
  "graphql": {
    "query": "
query (
  $id: ID,
  $first: Int,
  $offset: Int,
  $sortBy: String,
  $order: String,
  $subscribed: Boolean,
  $autocomplete: String
) {
  group (id: $id) {
    id
    groupTopics(
  first: $first,
  offset: $offset,
  sortBy: $sortBy,
  order: $order,
  subscribed: $subscribed,
  autocomplete: $autocomplete
) {
  hasMore
  total
  items {
    id
    followersTotal
    isDefault
    isSubscribed
    lastReadPostId
    newPostCount
    postsTotal
    visibility
    group {
      id
    }
    topic {
      id
      name
    }
  }
}

  }
}
",
    "variables": {
      "autocomplete": "a",
      "first": 7,
      "id": 765,
      "offset": 3,
      "order": "desc",
      "sortBy": "name",
      "subscribed": true,
    },
  },
  "meta": {
    "extractModel": "Group",
    "extractQueryResults": {
      "getItems": [Function],
    },
  },
  "type": "FETCH_GROUP_TOPICS",
}
`;

exports[`matches snapshot without groupId 1`] = `
{
  "graphql": {
    "query": "
query (
  $first: Int,
  $offset: Int,
  $sortBy: String,
  $order: String,
  $subscribed: Boolean,
  $autocomplete: String
) {
  groupTopics(
  first: $first,
  offset: $offset,
  sortBy: $sortBy,
  order: $order,
  subscribed: $subscribed,
  autocomplete: $autocomplete
) {
  hasMore
  total
  items {
    id
    followersTotal
    isDefault
    isSubscribed
    lastReadPostId
    newPostCount
    postsTotal
    visibility
    group {
      id
    }
    topic {
      id
      name
    }
  }
}

}
",
    "variables": {
      "autocomplete": "",
      "first": 20,
      "id": null,
      "offset": 0,
      "order": "desc",
      "sortBy": undefined,
      "subscribed": false,
    },
  },
  "meta": {
    "extractModel": "GroupTopic",
    "extractQueryResults": {
      "getItems": [Function],
    },
  },
  "type": "FETCH_GROUP_TOPICS",
}
`;
